--- a/9_fourth_model_implementation.ipynb
+++ b/9_fourth_model_implementation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "import math\n",
     "from numpy.typing import NDArray\n",
-    "from typing import Dict"
+    "from typing import Dict\n",
+    "import pandas as pd\n",
+    "from typing import cast\n"
    ]
   },
   {
@@ -285,8 +287,8 @@
     "for label in range(label_count):\n",
     "    joint_entropies.append([])\n",
     "\n",
-    "    for j in range(label_count):\n",
-    "        and_prob = probs[label] * probs[j]\n",
+    "    for column_position in range(label_count):\n",
+    "        and_prob = probs[label] * probs[column_position]\n",
     "        joint_entropy = -1 * and_prob * math.log(and_prob, 2)\n",
     "        joint_entropies[label].append(joint_entropy)\n",
     "\n",
@@ -814,8 +816,8 @@
    ],
    "source": [
     "for label in range(label_count):\n",
-    "    for j in range(label_count):\n",
-    "        print(cond_entropy(label,j))"
+    "    for column_position in range(label_count):\n",
+    "        print(cond_entropy(label,column_position))"
    ]
   },
   {
@@ -1057,6 +1059,520 @@
     "    return joint_probability\n",
     "\n",
     "calculate_joint_probability(probs, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.638716343996387"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_conditional_entropy(probabilities: Probabilities, entropies: Entropies, label_x: int, label_y: int):\n",
+    "    joint_entropy = calculate_joint_probability(probabilities, label_x, label_y)\n",
+    "    entropy = entropies[label_y]\n",
+    "    return joint_entropy - entropy\n",
+    "\n",
+    "calculate_conditional_entropy(probs, entropies, 3, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9.5. Actually solving the LOP\n",
+    "\n",
+    "Now that we can easily calculate the entropies, let's focus on solving the linear ordering problem (LOP) that the article suggests.\n",
+    "\n",
+    "Recapping again, the article proposes that:\n",
+    "* We get an `n x n` matrix, where `n` is the number of labels.\n",
+    "* The rows and columns are the labels.\n",
+    "* Each cell in the matrix is the conditional entropy of the label in the row, given the label in the column.\n",
+    "* We sum the upper triangle of the matrix. That's the fitness score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>3</th>\n",
+       "      <th>2</th>\n",
+       "      <th>0</th>\n",
+       "      <th>5</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.638716</td>\n",
+       "      <td>0.640672</td>\n",
+       "      <td>0.696103</td>\n",
+       "      <td>0.690832</td>\n",
+       "      <td>0.775802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.574336</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.640672</td>\n",
+       "      <td>0.696103</td>\n",
+       "      <td>0.690832</td>\n",
+       "      <td>0.775802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.574336</td>\n",
+       "      <td>0.638716</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.696103</td>\n",
+       "      <td>0.690832</td>\n",
+       "      <td>0.775802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.574336</td>\n",
+       "      <td>0.638716</td>\n",
+       "      <td>0.640672</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.690832</td>\n",
+       "      <td>0.775802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.574336</td>\n",
+       "      <td>0.638716</td>\n",
+       "      <td>0.640672</td>\n",
+       "      <td>0.696103</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.775802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.574336</td>\n",
+       "      <td>0.638716</td>\n",
+       "      <td>0.640672</td>\n",
+       "      <td>0.696103</td>\n",
+       "      <td>0.690832</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          1         3         2         0         5         4\n",
+       "1  0.000000  0.638716  0.640672  0.696103  0.690832  0.775802\n",
+       "3  0.574336  0.000000  0.640672  0.696103  0.690832  0.775802\n",
+       "2  0.574336  0.638716  0.000000  0.696103  0.690832  0.775802\n",
+       "0  0.574336  0.638716  0.640672  0.000000  0.690832  0.775802\n",
+       "5  0.574336  0.638716  0.640672  0.696103  0.000000  0.775802\n",
+       "4  0.574336  0.638716  0.640672  0.696103  0.690832  0.000000"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_count = y.shape[1]\n",
+    "\n",
+    "label_order = [1, 3, 2, 0, 5, 4]\n",
+    "# trying a random order to see if it works\n",
+    "\n",
+    "matrix = {}\n",
+    "\n",
+    "for row_i in label_order:\n",
+    "    matrix[row_i] = {}\n",
+    "    for row_j in label_order:\n",
+    "        if row_i == row_j:\n",
+    "            matrix[row_i][row_j] = 0\n",
+    "            # this is to match the table described in the paper\n",
+    "            # but in reality we _have_ a >0 conditional entropy for a label with itself\n",
+    "            continue\n",
+    "\n",
+    "        cond_entropy = calculate_conditional_entropy(probs, entropies, row_i, row_j)\n",
+    "        matrix[row_i][row_j] = cond_entropy\n",
+    "    \n",
+    "t = pd.DataFrame(matrix)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: {1: 0,\n",
+       "  3: 0.5743357592196298,\n",
+       "  2: 0.5743357592196298,\n",
+       "  0: 0.5743357592196296,\n",
+       "  5: 0.5743357592196298,\n",
+       "  4: 0.5743357592196298},\n",
+       " 3: {1: 0.638716343996387,\n",
+       "  3: 0,\n",
+       "  2: 0.6387163439963869,\n",
+       "  0: 0.638716343996387,\n",
+       "  5: 0.6387163439963869,\n",
+       "  4: 0.6387163439963871},\n",
+       " 2: {1: 0.6406718924240618,\n",
+       "  3: 0.6406718924240616,\n",
+       "  2: 0,\n",
+       "  0: 0.6406718924240618,\n",
+       "  5: 0.6406718924240614,\n",
+       "  4: 0.6406718924240619},\n",
+       " 0: {1: 0.6961030672262445,\n",
+       "  3: 0.6961030672262446,\n",
+       "  2: 0.6961030672262446,\n",
+       "  0: 0,\n",
+       "  5: 0.6961030672262446,\n",
+       "  4: 0.6961030672262448},\n",
+       " 5: {1: 0.6908320386874189,\n",
+       "  3: 0.6908320386874188,\n",
+       "  2: 0.6908320386874186,\n",
+       "  0: 0.6908320386874189,\n",
+       "  5: 0,\n",
+       "  4: 0.690832038687419},\n",
+       " 4: {1: 0.775802371094453,\n",
+       "  3: 0.7758023710944532,\n",
+       "  2: 0.7758023710944527,\n",
+       "  0: 0.7758023710944533,\n",
+       "  5: 0.7758023710944532,\n",
+       "  4: 0}}"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.650709340745188"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_size_n = t.shape[0]\n",
+    "\n",
+    "upper_triangule_sum = 0\n",
+    "for row_position in range(matrix_size_n):\n",
+    "    for column_position in range(matrix_size_n):\n",
+    "        if column_position > row_position:\n",
+    "            upper_triangule_sum += t.iloc[row_position,column_position]\n",
+    "\n",
+    "upper_triangule_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.650706999999999"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.638716+0.640672+0.696103+0.690832+0.775802) + \\\n",
+    "    (0.640672+0.696103+0.690832+0.775802) + \\\n",
+    "        (0.696103+0.690832+0.775802) + (0.690832+0.775802) + 0.775802"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly as before, let's now build a _final code_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: {1: 0,\n",
+       "  3: 0.5743357592196298,\n",
+       "  2: 0.5743357592196298,\n",
+       "  0: 0.5743357592196296,\n",
+       "  5: 0.5743357592196298,\n",
+       "  4: 0.5743357592196298},\n",
+       " 3: {1: 0.638716343996387,\n",
+       "  3: 0,\n",
+       "  2: 0.6387163439963869,\n",
+       "  0: 0.638716343996387,\n",
+       "  5: 0.6387163439963869,\n",
+       "  4: 0.6387163439963871},\n",
+       " 2: {1: 0.6406718924240618,\n",
+       "  3: 0.6406718924240616,\n",
+       "  2: 0,\n",
+       "  0: 0.6406718924240618,\n",
+       "  5: 0.6406718924240614,\n",
+       "  4: 0.6406718924240619},\n",
+       " 0: {1: 0.6961030672262445,\n",
+       "  3: 0.6961030672262446,\n",
+       "  2: 0.6961030672262446,\n",
+       "  0: 0,\n",
+       "  5: 0.6961030672262446,\n",
+       "  4: 0.6961030672262448},\n",
+       " 5: {1: 0.6908320386874189,\n",
+       "  3: 0.6908320386874188,\n",
+       "  2: 0.6908320386874186,\n",
+       "  0: 0.6908320386874189,\n",
+       "  5: 0,\n",
+       "  4: 0.690832038687419},\n",
+       " 4: {1: 0.775802371094453,\n",
+       "  3: 0.7758023710944532,\n",
+       "  2: 0.7758023710944527,\n",
+       "  0: 0.7758023710944533,\n",
+       "  5: 0.7758023710944532,\n",
+       "  4: 0}}"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LOPMatrix = Dict[int, Dict[int, float]]\n",
+    "\n",
+    "def build_lop_matrix(\n",
+    "    label_order: List[int],\n",
+    "    probabilities: Probabilities,\n",
+    "    entropies: Entropies\n",
+    ") -> LOPMatrix:\n",
+    "    matrix = {}\n",
+    "\n",
+    "    for row_i in label_order:\n",
+    "        matrix[row_i] = {}\n",
+    "        for row_j in label_order:\n",
+    "            if row_i == row_j:\n",
+    "                matrix[row_i][row_j] = 0\n",
+    "                # this is to match the table described in the paper\n",
+    "                # but in reality we _have_ a >0 conditional entropy for a label with itself\n",
+    "                continue\n",
+    "\n",
+    "            cond_entropy = calculate_conditional_entropy(probabilities, entropies, row_i, row_j)\n",
+    "            matrix[row_i][row_j] = cond_entropy\n",
+    "        \n",
+    "    return matrix\n",
+    "\n",
+    "label_order = [1, 3, 2, 0, 5, 4]\n",
+    "# trying a random order to see if it works\n",
+    "lop_matrix = build_lop_matrix(label_order, probs, entropies)\n",
+    "lop_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.650709340745188"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_lop(lop_matrix: LOPMatrix) -> float:\n",
+    "    matrix_size_n = len(lop_matrix)\n",
+    "    lop_df = pd.DataFrame(lop_matrix)\n",
+    "\n",
+    "    upper_triangle_sum = 0\n",
+    "    for row_position in range(matrix_size_n):\n",
+    "        for column_position in range(matrix_size_n):\n",
+    "            if column_position > row_position:\n",
+    "                conditional_probability = lop_df.iloc[row_position, column_position]\n",
+    "                upper_triangle_sum += cast(float, conditional_probability)\n",
+    "                # the conversion to a dataframe is not necessary\n",
+    "                # but makes it easier to find the element we want\n",
+    "                # by their order in the rows or columns\n",
+    "                # instead of the actual column or row index\n",
+    "    \n",
+    "    return upper_triangle_sum\n",
+    "\n",
+    "calculate_lop(lop_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9.5.1 Why summing the upper triangle?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9.6. Putting it all together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.967467469102132"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def test_solution(y: NDArray[np.int64], label_order: List[int]) -> float:\n",
+    "    probs = calculate_probabilities(y)\n",
+    "    entropies = calculate_entropies(probs)\n",
+    "    lop_matrix = build_lop_matrix(label_order, probs, entropies)\n",
+    "    return calculate_lop(lop_matrix)\n",
+    "\n",
+    "y = datasets[\"scene\"][\"y_train\"]\n",
+    "label_order = [4, 1, 3, 5, 2, 0]\n",
+    "test_solution(y, label_order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 0, 1, 5, 3, 4])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10.351147933185574"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_count = y.shape[1]\n",
+    "label_space = np.arange(label_count)\n",
+    "\n",
+    "def fitness_func(ga_instance: Any, solution: Any, solution_idx: Any) -> float:\n",
+    "    probs = calculate_probabilities(y)\n",
+    "    entropies = calculate_entropies(probs)\n",
+    "    lop_matrix = build_lop_matrix(solution, probs, entropies)\n",
+    "    return calculate_lop(lop_matrix)\n",
+    "\n",
+    "ga_model = pygad.GA( #type:ignore\n",
+    "    gene_type=int,\n",
+    "    gene_space=label_space,\n",
+    "    save_best_solutions=False,\n",
+    "    fitness_func=fitness_func,\n",
+    "    allow_duplicate_genes=False, # very important, otherwise we will have duplicate labels in the ordering\n",
+    "    num_genes=label_count,\n",
+    "\n",
+    "    # set up\n",
+    "    num_generations=5,\n",
+    "    sol_per_pop=3,\n",
+    "\n",
+    "    # following what the article describes\n",
+    "    keep_elitism=1, # also following what the article describes, but we have to double check [TODO]\n",
+    "    parent_selection_type=\"rws\", # following what the article describes\n",
+    "    # mutation_probability=0.005, # following what the article describes\n",
+    "\n",
+    "    # the following settings are fixed\n",
+    "    # they were chosen for no particular reason\n",
+    "    # they are being kept as fixed to simplify the model\n",
+    "    num_parents_mating=2,\n",
+    "    crossover_type=\"scattered\",\n",
+    "    mutation_type=\"random\",\n",
+    "    mutation_by_replacement=True,\n",
+    "    mutation_num_genes=1,\n",
+    ")\n",
+    "\n",
+    "ga_model.run()\n",
+    "\n",
+    "solution, _, _ = ga_model.best_solution()\n",
+    "display(solution)\n",
+    "\n",
+    "test_solution(y, solution)"
    ]
   }
  ],
